Closed Bug 1730431 Opened 4 years ago Closed 3 years ago

There shouldn't be a default min/max value for role="spinbutton"

Categories

(Core :: Disability Access APIs, defect, P3)

defect

Tracking

()

VERIFIED FIXED
108 Branch
Tracking Status
firefox108 --- verified
firefox109 --- verified

People

(Reporter: Jamie, Assigned: Jamie)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

STR:

  1. Open this test case:
    data:text/html,<button role="spinbutton">
  2. Right click the button and choose Inspect Accessibility Properties.
  3. Check the value property.
    • Expected: "" or "0"
    • Actual: "50"

Unlike all other range roles (which have default minimum and maximum values), the ARIA spec says that spinbutton has no defaults

Default for aria-valuemin is that there is no minimum value.
Default for aria-valuemax is that there is no maximum value.
Default for aria-valuenow is that there is no current value.

This raises the question of how to expose "no value". Chromium exposes 0 for both numeric value and text value. I'd prefer we expose an empty text value (though the numeric value still has to be 0). Either way, "50" is wrong.

Practically, this results in a very confusing user experience for <input type="date"> and <input type="time">. If the field is empty, the numeric fields expose a value of "50", which just doesn't make any sense. "0" is better, but still not delightful given what is displayed visually.

Changing severity to S2 because this is impacts users directly.

Severity: -- → S2
Priority: -- → P3
See Also: → 1357097
Depends on: 1357071

This causes us to expose "50" for <input type="date"> fields with CTW enabled, since CTW doesn't handle aria-valuetext="". While that hack does work for LocalAccessible, that's not a great fix anyway.

Assignee: nobody → jteh

For spinbutton, the spec says there should be "no value" for all of these.
Importantly, this prevents the incorrect value of "50" being reported for ARIA spinbuttons with no value.

Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ea4a95cf8909 Fix incorrect default min/cur/max/text values for ARIA spinbuttons. r=eeejay
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
QA Whiteboard: [qa-108b-p2]

Reproduced on a 2021-09-12 Nightly build on macOS 12. Verified as fixed on Firefox 108.0b1(build ID: 20221114145411) Nightly 109.0a1(build ID: 20221114214403) on macOS 12, Windows 10, Ubuntu 22.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-108b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: