Bug 1730431: Fix incorrect default min/cur/max/text values for ARIA spinbuttons. r=eeejay

For spinbutton, the spec says there should be "no value" for all of these.
Importantly, this prevents the incorrect value of "50" being reported for ARIA spinbuttons with no value.

Differential Revision: https://phabricator.services.mozilla.com/D159924